<resources>
    <string name="app_name">A3csci3130</string>
    <string name="title_activity_list">ListActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="province">Province</string>
    <string name="update_data">Update Data</string>
    <string name="erase_contact">Erase Contact</string>
    <string name="business_number">Business number</string>
    <string name="primary_business">Primary business</string>
    <string name="address">Address</string>
    <string name="create_contact">Create Contact</string>
</resources>
