<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.DetailViewActivity">

    <EditText
        android:id="@+id/detailname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/detail_province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailname"
        android:layout_margin="8dp"
        android:hint="@string/province" />

    <EditText
        android:id="@+id/detail_business_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_province"
        android:layout_margin="8dp"
        android:hint="@string/business_number"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/detail_primary_business"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_business_number"
        android:layout_margin="8dp"
        android:hint="@string/primary_business" />

    <EditText
        android:id="@+id/detail_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_primary_business"
        android:layout_margin="8dp"
        android:hint="@string/address" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/detail_address"
        android:layout_margin="8dp"
        android:onClick="updateContact"
        android:text="@string/update_data" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/detail_address"
        android:layout_margin="8dp"
        android:onClick="eraseContact"
        android:text="@string/erase_contact" />

</RelativeLayout>
