<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.CreateContactAcitivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_margin="8dp"
        android:hint="@string/province" />

    <EditText
        android:id="@+id/business_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/province"
        android:layout_margin="8dp"
        android:hint="@string/business_number"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/primary_business"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/business_number"
        android:layout_margin="8dp"
        android:hint="@string/primary_business" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/primary_business"
        android:layout_margin="8dp"
        android:hint="@string/address" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_centerHorizontal="true"
        android:onClick="submitInfoButton"
        android:padding="16dp"
        android:text="@string/create_contact" />

</RelativeLayout>
